seer-core/tests/snapshots/format_snapshots__human_status_expired_snapshot.snap
---
source: seer-core/tests/format_snapshots.rs
assertion_line: 301
expression: human ().format_status (& fixture_status_expired())
---

[1;95mStatus: expired.example[0m
[37m───────────────────────[0m
  [1;96mHTTP Status[0m: [1;92m200 (OK)[0m

  [1;96mSSL Certificate[0m: [1;93mNot available (HTTPS may not be configured)[0m

  [1;96mDomain Registration[0m:
    [1;96mRegistrar[0m: [97mMock Registrar Inc.[0m
    [1;96mExpires[0m: [1;91m2020-01-01 (expired [N] days ago)[0m

  [1;96mDNS Resolution[0m: [1;93mCheck failed[0m
