seer-core/tests/snapshots/format_snapshots__human_status_full_snapshot.snap
---
source: seer-core/tests/format_snapshots.rs
expression: human ().format_status (& fixture_status_full())
---

[1;95mStatus: example.com[0m
[37m───────────────────[0m
  [1;96mHTTP Status[0m: [1;92m200 (OK)[0m
  [1;96mSite Title[0m: [97mExample Domain[0m

  [1;96mSSL Certificate[0m:
    [1;96mSubject[0m: [97mCN=example.com[0m
    [1;96mIssuer[0m: [97mCN=Mock CA[0m
    [1;96mStatus[0m: [1;92mValid[0m
    [1;96mValid From[0m: [97m2025-01-01[0m
    [1;96mExpires[0m: [1;92m2099-01-01 (expires in [N] days)[0m

  [1;96mCAA Policy[0m:
    [1;96mFound at[0m: [97mexample.com[0m
    [97m0[0m [1;96missue[0m "letsencrypt.org"
    [97m0[0m [1;96missuewild[0m "pki.goog"
    [97m128[0m [1;96miodef[0m "mailto:security@example.com"

  [1;96mDomain Registration[0m:
    [1;96mRegistrar[0m: [97mMock Registrar Inc.[0m
    [1;96mExpires[0m: [1;92m2099-03-15 (expires in [N] days)[0m

  [1;96mDNS Resolution[0m:
    [1;92m✓ Resolving[0m
    [1;96mCNAME[0m: Aliases to [1;92medge.example.net[0m
    [1;96mIPv4 (A)[0m:
      • [97m192.0.2.1[0m
    [1;96mIPv6 (AAAA)[0m:
      • [97m2001:db8::1[0m
    [1;96mNameservers[0m:
      • [97mns1.example.com[0m

note: CAA is checked by CAs at issuance time, not by clients at validation time. A cert whose issuer is not in the current CAA policy is not invalid — it may have been issued before the policy was set, or under a parent zone. Treat mismatches as informational.
