seer-core/tests/snapshots/format_snapshots__human_subdomain_baseline_diff_missing_snapshot.snap
---
source: seer-core/tests/format_snapshots.rs
assertion_line: 301
expression: human().format_subdomain_baseline_diff(&fixture_subdomain_baseline_diff_missing())
---

[1;95mSubdomain diff: example.com[0m
[37m───────────────────────────[0m
[1;93mNo stored baseline to compare against (first run)[0m
